# rs-gpx-cli

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: cli.rs  main.rs  parser.rs
tests/: conversion_test.rs  test.rs
tests/data/: input.gpx  output.gpx
tests/resources/: hamburg-bremen.gpx
