[package]
name = "rs-gpx"
version = "0.3.0"
authors = ["Paulius Gudonis <pg@neqsoft.com>"]
readme = "README.md"
repository = "https://github.com/nakkht/rs-gpx-cli"
license = "MIT"
edition = "2021"

[profile.release]
strip = true

[dependencies]
structopt = "0.3.26"
quick-xml = "0.23.0"
chrono = "0.4.19"